Versão Atualizada - resolução de erros

--- a/Apresentacao/equipe.html
+++ b/Apresentacao/equipe.html
@@ -1,37 +1,67 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Equipe</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <head>
         <style>
-            h1 {
-               text-align: center;
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+                background-color: #333;
+            }
+
+            li {
+                float: left;
+            }
+
+            li a {
+                font-family: "Arial", sans-serif;
+                display: block;
+                color: white;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+
+            li a:hover {
+                background-color: #111;
+            }
+        </style>
+        <style>
+        table {
+            border-collapse: collapse;
         }
-            h2 {
-                text-align: left;
+
+        table, td, th {
+            border: 1px solid black;
         }
         </style>
     </head>
-        <body>
+    
+    <body>
+        <ul>
+            <li><a class="active" href="../index.php">Home</a></li>
+            <li><a href="/Kardashians/Apresentacao/equipe.html">Equipe</a></li>            
+            <li><a href="/Kardashians/produtos/Passo2.html">Projetos</a></li>
+            <li><a href="/Kardashians/Tecnologias/Passo4.html">Tecnologias</a></li>
+            <li><a href="/Kardashians/produtos/Passo2.html">Parceiros</a></li> 
+            <li><a href="/Kardashians/Contatos/Passo5.html">Fale Conosco</a></li>
+        </ul>     
+    </body>
 
-        <h1>Área de Apresentação</h1>
-        <h2>Equipe</h2>
-        <p> O Grupo Kardashians é composto por 6 integrantes:
-        <h2> Bruno Mattos</h2>
-        <h2> GleiceKelly Santos</h2>
-        <h2> João Víctor Siqueira</h2>
-        <h2> Lubia Silveira</h2>
-        <h2> Michael Soares</h2>
-        <h2> Natalí Ferreira</h2>
-        </p>
-</body>
+    <body>   
+        <h1>Equipe</h1> 
+        <p>Os membros da equipe são discentes do 4º ano da turma 'A' do Curso <br/>
+           Técnico em informática do Instituto Federal de Educação, Ciência <br/>e Tecnologia de Rondônia - Campus Ariquemes.</p>
+        <h3> Bruno Mattos Leal</h3>
+        <h3> Gleicekelly Santos</h3>
+        <h3> João Víctor Siqueira</h3>
+        <h3> Lubia Silveira Barros </h3>
+        <h3> Michael Soares</h3>
+        <h3> Natalí Xavier Ferreira</h3>  
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
+    </body>
 </html>
