--- a/Tecnologias/Passo4.html
+++ b/Tecnologias/Passo4.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Tecnologias</title>
         <meta charset="UTF-8">
-        <title>Portal Kardashians </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             ul {
                 list-style-type: none;
@@ -39,17 +40,21 @@
         }
         </style>
     </head>
+    
     <body>
         <ul>
-            <li><a class="active" href="#home">Home</a></li>
+            <li><a class="active" href="../index.php">Home</a></li>
             <li><a href="/Kardashians/Apresentacao/equipe.html">Equipe</a></li>            
             <li><a href="/Kardashians/produtos/Passo2.html">Projetos</a></li>
             <li><a href="/Kardashians/Tecnologias/Passo4.html">Tecnologias</a></li>
             <li><a href="/Kardashians/Parceiros/Passo3.html">Parceiros</a></li> 
             <li><a href="/Kardashians/Contatos/Passo5.html">Fale Conosco</a></li>
-        </ul>     
+        </ul> 
+        <h1>Tecnologias</h1>
+        <p>A equipe usa várias ferramentas, conforme as exigências do problema<br/>
+        a ser resolvido. De forma geral, usamos <a href="http://www.postgresql.org/" target="_blank">PostgreSQL</a> como Sistema Gerenciador<br/>
+        de Banco de Dados; <a href="https://www.apachefriends.org/pt_br/index.html" target="_blank">XAMPP</a> para usar apache; <a href="https://netbeans.org/" target="_blank">Netbeans</a> ou <a href="http://www.lazarus-ide.org/" target="_blank">Lazarus</a> como editor de<br/>
+        códigos; e <a href="https://github.com/" target="_blank">Git</a> para o controle de versões.</p>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
     </body>
-    <h1>Kardashians</h1>
-    <img src="brasao.png" alt="Kardashians" title="Kardashians"/>
-    <p><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
 </html>
