--- a/Parceiros/Passo3.html
+++ b/Parceiros/Passo3.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Parceiros</title>
         <meta charset="UTF-8">
-        <title>Portal Kardashians </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             ul {
                 list-style-type: none;
@@ -39,17 +40,20 @@
         }
         </style>
     </head>
+    
     <body>
         <ul>
-            <li><a class="active" href="#home">Home</a></li>
+            <li><a class="active" href="../index.php">Home</a></li>
             <li><a href="/Kardashians/Apresentacao/equipe.html">Equipe</a></li>            
             <li><a href="/Kardashians/produtos/Passo2.html">Projetos</a></li>
             <li><a href="/Kardashians/Tecnologias/Passo4.html">Tecnologias</a></li>
             <li><a href="/Kardashians/Parceiros/Passo3.html">Parceiros</a></li> 
             <li><a href="/Kardashians/Contatos/Passo5.html">Fale Conosco</a></li>
-        </ul>     
-    </body>
-    <h1>Kardashians</h1>
-    <img src="brasao.png" alt="Kardashians" title="Kardashians"/>
-    <p><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
+        </ul> 
+        <h1>Parceiros</h1>
+        <h2>6Legends/!!!</h2>
+        <img src="D.sistema.png" alt="6Legends"/>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
+    </body>   
+ 
 </html>
