--- a/produtos/Passo2.html
+++ b/produtos/Passo2.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>Projetos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+                background-color: #333;
+            }
+
+            li {
+                float: left;
+            }
+
+            li a {
+                font-family: "Arial", sans-serif;
+                display: block;
+                color: white;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+
+            li a:hover {
+                background-color: #111;
+            }
+        </style>
+        <style>
+        table {
+            border-collapse: collapse;
+        }
+
+        table, td, th {
+            border: 1px solid black;
+        }
+        </style>
     </head>
+    
     <body>
+        <ul>
+            <li><a class="active" href="../index.php">Home</a></li>
+            <li><a href="/Kardashians/Apresentacao/equipe.html">Equipe</a></li>            
+            <li><a href="/Kardashians/produtos/Passo2.html">Projetos</a></li>
+            <li><a href="/Kardashians/Tecnologias/Passo4.html">Tecnologias</a></li>
+            <li><a href="/Kardashians/Parceiros/Passo3.html">Parceiros</a></li> 
+            <li><a href="/Kardashians/Contatos/Passo5.html">Fale Conosco</a></li>
+        </ul> 
         <div>
-            <h1>Projetos, serviços e produtos</h1>
-            <h2> Ainda não há projetos, serviços e produtos disponíveis</h2>
+            <h1>Projetos</h1>
+            <a href="https://drive.google.com/drive/folders/0B6RN04NjR4mlVGdOT2RtSWxCQzQ"><img src="pasta.ico"/></a>
         </div>
-        
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
     </body>
+ 
 </html>
