--- a/Apresentacao/equipe.html
+++ b/Apresentacao/equipe.html
@@ -57,11 +57,17 @@
         <p>Os membros da equipe são discentes do 4º ano da turma 'A' do Curso <br/>
            Técnico em informática do Instituto Federal de Educação, Ciência <br/>e Tecnologia de Rondônia - Campus Ariquemes.</p>
         <h3> Bruno Mattos Leal</h3>
+        <img src="foto01.jpg" title="Bruno">
         <h3> Gleicekelly Santos</h3>
+        <img src="foto02.jpg" title="Gleicekelly">
         <h3> João Víctor Siqueira</h3>
+        <img src="foto03.jpg" title="Victor">
         <h3> Lubia Silveira Barros </h3>
+        <img src="foto04.jpg" title="Lubia">
         <h3> Michael Soares</h3>
+        <img src="foto05.jpg" title="Lubia">
         <h3> Natalí Xavier Ferreira</h3>  
+        <img src="foto06.jpg" title="Lubia">
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
     </body>
 </html>
