--- a/Apresentacao/equipe.html
+++ b/Apresentacao/equipe.html
@@ -38,6 +38,9 @@
         table, td, th {
             border: 1px solid black;
         }
+         h1, h3, p {
+            font-family: "Arial", sans-serif;
+        }
         </style>
     </head>
     
@@ -53,9 +56,9 @@
     </body>
 
     <body>   
-        <h1>Equipe</h1> 
-        <p>Os membros da equipe são discentes do 4º ano da turma 'A' do Curso <br/>
-           Técnico em informática do Instituto Federal de Educação, Ciência <br/>e Tecnologia de Rondônia - Campus Ariquemes.</p>
+    <center><h1>Equipe</h1></center> 
+    <center><p>Os membros da equipe são discentes do 4º ano da turma 'A' do Curso 
+            Técnico em informática do Instituto Federal de Educação, Ciência e Tecnologia de Rondônia - Campus Ariquemes.</p></center>
         <h3> Bruno Mattos Leal</h3>
         <img src="foto01.jpg" title="Bruno">
         <h3> Gleicekelly Santos</h3>
@@ -68,6 +71,6 @@
         <img src="foto05.jpg" title="Lubia">
         <h3> Natalí Xavier Ferreira</h3>  
         <img src="foto06.jpg" title="Lubia">
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
+    <center><p><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p></center>
     </body>
 </html>
