--- a/Contatos/Passo5.html
+++ b/Contatos/Passo5.html
@@ -38,6 +38,9 @@
         table, td, th {
             border: 1px solid black;
         }
+         h1, p{
+            font-family: "Arial", sans-serif;
+        }
         </style>
     </head>
     
@@ -51,14 +54,14 @@
             <li><a href="/Kardashians/Contatos/Passo5.html">Fale Conosco</a></li>
         </ul> 
         <h1>Fale conosco</h1>
-        Bruno Mattos Leal - brunomattosleal@gmail.com <br/>
-        Gleicekelly Santos - gleicekellysantos4@gmail.com <br/>
-        João Victor Siqueira - vitoscamargo@gmail.com <br/>
-        Lúbia Silveira Barros - luubiabarros2@gmail.com <br/>
-        Michael Soares - michael-maiquinho@hotmail.com <br/>
-        Natalí Xavier Ferreira - natali.xavier.ferreira@gmail.com <br/>
+        <p>Bruno Mattos Leal - brunomattosleal@gmail.com </p>
+        <p>Gleicekelly Santos - gleicekellysantos4@gmail.com </p>
+        <p>João Victor Siqueira - vitoscamargo@gmail.com </p>
+        <p>Lúbia Silveira Barros - lubiasbarros@gmail.com</p> 
+        <p>Michael Soares - michael-maiquinho@hotmail.com </p>
+        <p>Natalí Xavier Ferreira - natali.xavier.ferreira@gmail.com </p><br/>
 
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
+    <center><p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p></center>
     </body>
 
 </html>
