--- a/Tecnologias/Passo4.html
+++ b/Tecnologias/Passo4.html
@@ -38,6 +38,9 @@
         table, td, th {
             border: 1px solid black;
         }
+        h1, p {
+            font-family: "Arial", sans-serif;
+        }
         </style>
     </head>
     
@@ -50,11 +53,11 @@
             <li><a href="/Kardashians/Parceiros/Passo3.html">Parceiros</a></li> 
             <li><a href="/Kardashians/Contatos/Passo5.html">Fale Conosco</a></li>
         </ul> 
-        <h1>Tecnologias</h1>
-        <p>A equipe usa várias ferramentas, conforme as exigências do problema<br/>
-        a ser resolvido. De forma geral, usamos <a href="http://www.postgresql.org/" target="_blank">PostgreSQL</a> como Sistema Gerenciador<br/>
-        de Banco de Dados; <a href="https://www.apachefriends.org/pt_br/index.html" target="_blank">XAMPP</a> para usar apache; <a href="https://netbeans.org/" target="_blank">Netbeans</a> ou <a href="http://www.lazarus-ide.org/" target="_blank">Lazarus</a> como editor de<br/>
-        códigos; e <a href="https://github.com/" target="_blank">Git</a> para o controle de versões.</p>
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
+    <center><h1>Tecnologias</h1></center>
+    <center><p>A equipe usa várias ferramentas, conforme as exigências do problema
+        a ser resolvido. De forma geral, usamos <a href="http://www.postgresql.org/" target="_blank">PostgreSQL</a> como Sistema Gerenciador
+        de Banco de Dados; <a href="https://www.apachefriends.org/pt_br/index.html" target="_blank">XAMPP</a> para usar apache; <a href="https://netbeans.org/" target="_blank">Netbeans</a> ou <a href="http://www.lazarus-ide.org/" target="_blank">Lazarus</a> como editor de
+        códigos; e <a href="https://github.com/" target="_blank">Git</a> para o controle de versões.</p></center>
+        <center><p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p></center>
     </body>
 </html>
