--- a/produtos/Passo2.html
+++ b/produtos/Passo2.html
@@ -38,6 +38,9 @@
         table, td, th {
             border: 1px solid black;
         }
+        h1, p {
+            font-family: "Arial", sans-serif;
+        }
         </style>
     </head>
     
@@ -54,7 +57,7 @@
             <h1>Projetos</h1>
             <a href="https://drive.google.com/drive/folders/0B6RN04NjR4mlVGdOT2RtSWxCQzQ"><img src="pasta.ico"/></a>
         </div>
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
+        <center><p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p></center>
     </body>
  
 </html>
