--- a/Parceiros/Passo3.html
+++ b/Parceiros/Passo3.html
@@ -38,6 +38,10 @@
         table, td, th {
             border: 1px solid black;
         }
+        
+         h1, h3, p {
+            font-family: "Arial", sans-serif;
+        }
         </style>
     </head>
     
@@ -51,9 +55,9 @@
             <li><a href="/Kardashians/Contatos/Passo5.html">Fale Conosco</a></li>
         </ul> 
         <h1>Parceiros</h1>
-        <h2>6Legends/!!!</h2>
+        <h3>6Legends/!!!</h3>
         <img src="D.sistema.png" alt="6Legends"/>
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p>
+        <center><p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><p>Copyright &copy; 2016 - Kardashians</p></center>
     </body>   
  
 </html>
